# django-ssr

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  LICENSE  README.md  setup.cfg  setup.py  tox.ini
django_ssr/: __init__.py  backends.py  helpers.py  middleware.py  settings.py
requirements/: requirements-testing.txt
tests/: settings.py  test_helpers.py
tests/test_backends/: test_base.py  test_caching_backend.py  test_prerender_io.py  test_prerender_io_hosted.py  test_requests_django_response_builder_mixin.py
tests/test_middleware/: test_base.py  test_user_agent.py
