[flake8]
exclude = .tox
ignore = F401
max-line-length = 119

[metadata]
license-file = LICENSE

[coverage:run]
source =
    django_ssr
    tests

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
testspath = tests
